ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: ingress-nginx
spec:
  rules:
  - host: cicd-project.com
    http:
      paths:
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 3001
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3000
